--- a/angular/src/app/auth/register-page/register/register.component.html
+++ b/angular/src/app/auth/register-page/register/register.component.html
@@ -29,7 +29,6 @@
             <!-- Login -->
             <div class="login-wrapper">
                 <div class="loginbox">
-                    <form (submit)="register()">
                     <div class="img-logo">
                         <img src="assets/img/logo/BIZZMATCH.png" class="img-fluid" alt="Logo" />
                         <div class="back-home">
@@ -38,30 +37,18 @@
                     </div>
                     <h1>Sign up</h1>
                     <div class="form-group">
-                        <label class="form-control-label" >username</label>
-                        <input type="text" class="form-control" placeholder="Enter your Full Name" 
-                        [(ngModel)]="registerForm.username" (input)="onChangeUsername(registerForm.username)" [ngModelOptions]="{standalone: true}"/>
+                        <label class="form-control-label">Full Name</label>
+                        <input type="text" class="form-control" placeholder="Enter your Full Name" />
                     </div>
                     <div class="form-group">
-                        <label class="form-control-label" >FirstName</label>
-                        <input type="text" class="form-control" placeholder="Enter your Full Name"
-                        [(ngModel)]="registerForm.firstname" (input)="onChangeFirstName(registerForm.firstname)" [ngModelOptions]="{standalone: true}"/>
+                        <label class="form-control-label">Email</label>
+                        <input type="email" class="form-control" placeholder="Enter your email address" />
                     </div>
                     <div class="form-group">
-                        <label class="form-control-label" >LastName</label>
-                        <input type="text" class="form-control" placeholder="Enter your Full Name" 
-                        [(ngModel)]="registerForm.lastname" (input)="onChangeLastName(registerForm.lastname)" [ngModelOptions]="{standalone: true}"/>
-                    </div>
-                    <div class="form-group">
-                        <label class="form-control-label" >Email</label>
-                        <input type="email" class="form-control" placeholder="Enter your email address" 
-                        [(ngModel)]="registerForm.email" (input)="onChangeEmail(registerForm.email)" [ngModelOptions]="{standalone: true}"/>
-                    </div>
-                    <div class="form-group">
-                        <label class="form-control-label" >Password</label>
+                        <label class="form-control-label">Password</label>
                         <div class="pass-group" id="passwordInput">
                             <input [type]="password" class="form-control pass-input" placeholder="Enter your password"
-                                [(ngModel)]="registerForm.password" (input)="onChangePassword(registerForm.password)" [ngModelOptions]="{standalone: true}"/>
+                                [(ngModel)]="registerForm.password" (input)="onChangePassword(registerForm.password)" />
                             <span><i-feather name="eye" class="toggle-password feather-eye" (click)="onClick()"
                                     *ngIf="show"></i-feather></span>
                             <span><i-feather name="check" class="pass-checked" [ngClass]="{
@@ -101,11 +88,10 @@
                         </label>
                     </div>
                     <div class="d-grid">
-                        <button class="btn btn-primary btn-start" type="submit">
+                        <button class="btn btn-primary btn-start" type="submit" [routerLink]="routes.login">
                             Create Account
                         </button>
                     </div>
-                </form>
                 </div>
                 <div class="google-bg text-center">
                     <span><a href="javascript:;">Or sign in with</a></span>
