--- a/angular/src/app/components/enterprises/services/services.component.html
+++ b/angular/src/app/components/enterprises/services/services.component.html
@@ -4,18 +4,48 @@
 
     <!-- Search bar -->
     <mat-form-field class="search-field">
-      <input matInput placeholder="Search" [(ngModel)]="searchDataValue" (ngModelChange)="searchData($event)">
+      <input
+        matInput
+        placeholder="Search"
+        [(ngModel)]="searchDataValue"
+        (ngModelChange)="searchData($event)"
+      />
     </mat-form-field>
 
     <!-- Table to display services -->
     <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
-      <ng-container *ngFor="let column of displayedColumns; let i = index" [matColumnDef]="column">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header class="table-header">{{ column }}</th>
-        <td mat-cell *matCellDef="let service">{{ service[column] }}</td>
+      <ng-container
+        *ngFor="let column of displayedColumns; let i = index"
+        [matColumnDef]="column"
+      >
+        <th
+          mat-header-cell
+          *matHeaderCellDef
+          mat-sort-header
+          class="table-header"
+        >
+          {{ column }}
+        </th>
+        <ng-container
+          *ngIf="i != displayedColumns.length - 1; else actionColumns"
+          ><td mat-cell *matCellDef="let service">{{ service[column] }}</td></ng-container
+        >
+        <ng-template #actionColumns>
+          <td mat-cell *matCellDef="let meeting; let j = index">
+            <button (click)="orderService(j)" class="btn btn-three-secondary sub-btn mx-3">
+              <i class="fas fa-cart-shopping"></i>
+            </button>
+            <span *ngIf="loadingMessages[j]">Ordering...</span>
+            <ng-container *ngIf="serviceOrdersMessage[j]">
+              <span>Service ordered! </span>
+              <a class="link-primary" [routerLink]="routes.instructor_orders">Click here to check your orders!</a>
+            </ng-container>
+          </td>
+        </ng-template>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
   </div>
 </div>
