--- a/angular/src/app/components/instructor/instructor-orders/instructor-orders.component.html
+++ b/angular/src/app/components/instructor/instructor-orders/instructor-orders.component.html
@@ -1,44 +1,189 @@
 <div class="row">
   <div class="col-md-12">
-      <div class="settings-widget">
-          <div class="settings-inner-blk p-0">
-              <div class="sell-course-head comman-space">
-                  <h3>Orders</h3>
-                  <p>Order Dashboard is a quick overview of all current orders.</p>
-              </div>
-              <div class="comman-space pb-0">
-                  <div class="settings-tickets-blk course-instruct-blk table-responsive">
-
-                      <!-- Referred Users-->
-                      <table class="table table-nowrap mb-0">
-                          <thead>
-                            <tr>
-                              <th>COURSES</th>
-                              <th>SALES</th>
-                              <th>INVOICE</th>
-                              <th>DATE</th>
-                              <th>METHOD</th>
-                              <th></th>
-                            </tr>
-                          </thead>
-                          <tbody>
-                              <tr *ngFor="let data of orders">
-                                  <td class="instruct-orders-info">
-                                      <p><a [routerLink]="routes.page_course_details">{{data.courses}}</a></p>
-                                  </td>
-                                  <td>{{data.sales}}</td>
-                                  <td>{{data.invoice}}</td>
-                                  <td>{{data.date}}</td>
-                                  <td>{{data.method}}</td>
-                                  <td><a href="javascript:;"><i-feather name="more-vertical"></i-feather></a></td>
-                              </tr>
-                          </tbody>
-                        </table>
-                      <!-- /Referred Users-->
-
-                  </div>
-              </div>
+    <div class="settings-widget">
+      <div class="settings-inner-blk p-0">
+        <div class="sell-course-head comman-space">
+          <h3>Orders</h3>
+          <p>Order Dashboard is a quick overview of all current orders.</p>
+        </div>
+        <div class="comman-space pb-0">
+          <!-- Service Orders Tab -->
+          <div class="category-tab tickets-tab-blk">
+            <ul class="nav nav-justified">
+              <li class="nav-item">
+                <a href="#all" class="nav-link active" data-bs-toggle="tab"
+                  >All</a
+                >
+              </li>
+              <li class="nav-item">
+                <a href="#pending" class="nav-link" data-bs-toggle="tab"
+                  >Pending</a
+                >
+              </li>
+              <li class="nav-item">
+                <a href="#completed" class="nav-link" data-bs-toggle="tab"
+                  >Completed</a
+                >
+              </li>
+            </ul>
           </div>
+          <!-- /Service Orders Tab -->
+
+          <!-- Service Orders List -->
+          <div class="tab-content">
+            <div class="tab-pane fade show active" id="all">
+              <div class="settings-tickets-blk table-responsive">
+                <!-- All Orders-->
+                <table class="table table-nowrap mb-3">
+                  <thead>
+                    <tr>
+                      <th>Type</th>
+                      <th>Description</th>
+                      <th>Tarif</th>
+                      <th>Order Date</th>
+                      <th>Status</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr *ngFor="let data of orders; let j = index">
+                      <td class="px-2">
+                        <span
+                          >{{ data.type }}</span
+                        >
+                      </td>
+                      <td class="px-2">
+                        <span
+                          >{{ data.description }}</span
+                        >
+                      </td>
+                      <td class="px-2">
+                        <span
+                          >{{ data.tarification }}</span
+                        >
+                      </td>
+                      <td class="px-2">
+                        <span>{{ data.orderDate | date }}</span>
+                      </td>
+                      <td class="px-3">
+                        <span
+                          [ngClass]="{
+                            'info-low': data.status === 'PENDING',
+                            'info-high': data.status === 'COMPLETED'
+                          }"
+                          class="badge info-high"
+                          >{{ data.status | titlecase }}</span
+                        >
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+                <!-- /All Orders-->
+              </div>
+            </div>
+            <div class="tab-pane fade show" id="pending">
+              <div class="settings-tickets-blk table-responsive">
+                <!-- Pending Orders-->
+                <table class="table table-nowrap mb-3">
+                  <thead>
+                    <tr>
+                      <th>Type</th>
+                      <th>Description</th>
+                      <th>Tarif</th>
+                      <th>Order Date</th>
+                      <th>Status</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr *ngFor="let data of pending_orders; let j = index">
+                      <td class="px-2">
+                        <span
+                          >{{ data.type }}</span
+                        >
+                      </td>
+                      <td class="px-2">
+                        <span
+                          >{{ data.description }}</span
+                        >
+                      </td>
+                      <td class="px-2">
+                        <span
+                          >{{ data.tarification }}</span
+                        >
+                      </td>
+                      <td class="px-2">
+                        <span>{{ data.orderDate | date }}</span>
+                      </td>
+                      <td class="px-3">
+                        <span
+                          [ngClass]="{
+                            'info-low': data.status === 'PENDING',
+                            'info-high': data.status === 'COMPLETED'
+                          }"
+                          class="badge info-high"
+                          >{{ data.status | titlecase }}</span
+                        >
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+                <!-- /Pending Orders-->
+              </div>
+            </div>
+            <div class="tab-pane fade show" id="completed">
+              <div class="settings-tickets-blk table-responsive mb-3">
+                <!-- Completed Orders-->
+                <table class="table table-nowrap mb-0">
+                  <thead>
+                    <tr>
+                      <th>Type</th>
+                      <th>Description</th>
+                      <th>Tarif</th>
+                      <th>Order Date</th>
+                      <th>Status</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr *ngFor="let data of completed_orders; let j = index">
+                      <td class="px-2">
+                        <span
+                          >{{ data.type }}</span
+                        >
+                      </td>
+                      <td class="px-2">
+                        <span
+                          >{{ data.description }}</span
+                        >
+                      </td>
+                      <td class="px-2">
+                        <span
+                          >{{ data.tarification }}</span
+                        >
+                      </td>
+                      <td class="px-2">
+                        <span>{{ data.orderDate | date }}</span>
+                      </td>
+                      <td class="px-3">
+                        <span
+                          [ngClass]="{
+                            'info-low': data.status === 'PENDING',
+                            'info-high': data.status === 'COMPLETED'
+                          }"
+                          class="badge info-high"
+                          >{{ data.status | titlecase }}</span
+                        >
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+                <!-- /Completed Orders-->
+              </div>
+            </div>
+
+
+          </div>
+          <!-- Service Orders List -->
+        </div>
       </div>
+    </div>
   </div>
 </div>
