--- a/angular/src/app/components/instructor/instructor-tickets/instructor-tickets.component.html
+++ b/angular/src/app/components/instructor/instructor-tickets/instructor-tickets.component.html
@@ -1,4 +1,4 @@
-<div class="settings-top-widget">
+<!-- <div class="settings-top-widget">
     <div class="row">
         <div class="col-lg-4 col-md-6">
             <div class="card stat-info ttl-tickets">
@@ -28,162 +28,175 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 <div class="settings-widget">
-    <div class="settings-inner-blk p-0">
-        <div class="comman-space pb-0">
-            <div class="filter-grp ticket-grp d-flex align-items-center justify-content-between">
-                <div>
-                    <h3>Support Tickets</h3>
-                    <p>You can find all of your order Invoices.</p>
-                </div>
-                <div class="ticket-btn-grp">
-                    <a [routerLink]="routes.instructor_new_tickets">Add New Ticket</a>
-                </div>
-            </div>
-
-            <!-- Ticket Tab -->
-            <div class="category-tab tickets-tab-blk">
-                <ul class="nav nav-justified ">
-                    <li class="nav-item"><a href="#all" class="nav-link active" data-bs-toggle="tab" >All</a></li>
-                    <li class="nav-item"><a href="#open" class="nav-link" data-bs-toggle="tab" >Open</a></li>
-                    <li class="nav-item"><a href="#inprogress" class="nav-link" data-bs-toggle="tab" >Inprogress</a></li>
-                    <li class="nav-item"><a href="#close" class="nav-link" data-bs-toggle="tab" >Closed</a></li>
-                </ul>
-            </div>
-            <!-- /Ticket Tab -->
-
-            <!-- Referred Ticket List -->
-            <div class="tab-content">
-                <div class="tab-pane fade show active" id="all">
-                    <div class="settings-tickets-blk table-responsive">
-
-                        <!-- Referred Users-->
-                        <table class="table table-nowrap mb-0">
-                            <thead>
-                              <tr>
-                                <th>Subject</th>
-                                <th>Priority</th>
-                                <th>Category</th>
-                                <th>Status</th>
-                              </tr>
-                            </thead>
-                            <tbody>
-                                <tr *ngFor="let data of instructorTickets1">
-                                    <td>
-                                        <a href="javascript:;" class="link">
-                                            {{data.no}}
-                                        </a>
-                                        <span>{{data.subject}}</span>
-                                    </td>
-                                    <td><span [ngClass]="{'info-low': data.priority === 'Low', 'info-medium' : data.priority === 'Medium', 'info-high' : data.priority === 'High' }" class="badge info-high">{{data.priority}}</span></td>
-                                    <td>{{data.category}}</td>
-                                    <td><span [ngClass]="{'info-low': data.status === 'Opened', 'info-medium' : data.status === 'Inprogress', 'info-high' : data.status === 'Closed' }" class="badge info-high">{{data.status}}</span></td>
-                                </tr>
-                            </tbody>
-                          </table>
-                        <!-- /Referred Users-->
-
-                    </div>
-                </div>
-
-                <div class="tab-pane fade show " id="open">
-                    <div class="settings-tickets-blk table-responsive">
-
-                        <!-- Referred Users-->
-                        <table class="table table-nowrap mb-0">
-                            <thead>
-                              <tr>
-                                <th>Subject</th>
-                                <th>Priority</th>
-                                <th>Category</th>
-                                <th>Status</th>
-                              </tr>
-                            </thead>
-                            <tbody>
-                                <tr *ngFor="let data of instructorTickets2">
-                                    <td>
-                                        <a href="javascript:;" class="link">
-                                            {{data.no}}
-                                        </a>
-                                        <span>{{data.subject}}</span>
-                                    </td>
-                                    <td><span [ngClass]="{'info-low': data.priority === 'Low', 'info-medium' : data.priority === 'Medium', 'info-high' : data.priority === 'High' }" class="badge info-high">{{data.priority}}</span></td>
-                                    <td>{{data.category}}</td>
-                                    <td><span [ngClass]="{'info-low': data.status === 'Opened', 'info-medium' : data.status === 'Inprogress', 'info-high' : data.status === 'Closed' }" class="badge info-low">{{data.status}}</span></td>
-                                </tr>
-                            </tbody>
-                          </table>
-                        <!-- /Referred Users-->
-
-                    </div>
-                </div>
-                <div class="tab-pane fade show " id="inprogress">
-                    <div class="settings-tickets-blk table-responsive">
-
-                        <!-- Referred Users-->
-                        <table class="table table-nowrap mb-0">
-                            <thead>
-                              <tr>
-                                <th>Subject</th>
-                                <th>Priority</th>
-                                <th>Category</th>
-                                <th>Status</th>
-                              </tr>
-                            </thead>
-                            <tbody>
-                                <tr *ngFor="let data of instructorTickets3">
-                                    <td>
-                                        <a href="javascript:;" class="link">
-                                            {{data.no}}
-                                        </a>
-                                        <span>{{data.subject}}</span>
-                                    </td>
-                                    <td><span [ngClass]="{'info-low': data.priority === 'Low', 'info-medium' : data.priority === 'Medium', 'info-high' : data.priority === 'High' }" class="badge info-high">{{data.priority}}</span></td>
-                                    <td>{{data.category}}</td>
-                                    <td><span [ngClass]="{'info-low': data.status === 'Opened', 'info-medium' : data.status === 'Inprogress', 'info-high' : data.status === 'Closed' }" class="badge info-high">{{data.status}}</span></td>
-                                </tr>
-                            </tbody>
-                          </table>
-                        <!-- /Referred Users-->
-
-                    </div>
-                </div>
-
-                <div class="tab-pane fade show " id="close">
-                    <div class="settings-tickets-blk table-responsive">
-
-                        <!-- Referred Users-->
-                        <table class="table table-nowrap mb-0">
-                            <thead>
-                              <tr>
-                                <th>Subject</th>
-                                <th>Priority</th>
-                                <th>Category</th>
-                                <th>Status</th>
-                              </tr>
-                            </thead>
-                            <tbody>
-                                <tr *ngFor="let data of instructorTickets4">
-                                    <td>
-                                        <a href="javascript:;" class="link">
-                                            {{data.no}}
-                                        </a>
-                                        <span>{{data.subject}}</span>
-                                    </td>
-                                    <td><span [ngClass]="{'info-low': data.priority === 'Low', 'info-medium' : data.priority === 'Medium', 'info-high' : data.priority === 'High' }" class="badge info-high">{{data.priority}}</span></td>
-                                    <td>{{data.category}}</td>
-                                    <td><span [ngClass]="{'info-low': data.status === 'Opened', 'info-medium' : data.status === 'Inprogress', 'info-high' : data.status === 'Closed' }" class="badge info-low">{{data.status}}</span></td>
-                                </tr>
-                            </tbody>
-                          </table>
-                        <!-- /Referred Users-->
-
-                    </div>
-                </div>
-            </div>
-            <!-- Referred Ticket List -->
-
+  <div class="settings-inner-blk p-0">
+    <div class="comman-space pb-0">
+      <div
+        class="filter-grp ticket-grp d-flex align-items-center justify-content-between"
+      >
+        <div>
+          <h3>Support Tickets</h3>
+          <p>You can find all of your customer feedback & complaints.</p>
         </div>
+        <div class="ticket-btn-grp">
+          <a [routerLink]="routes.feedback">Add New Ticket</a>
+        </div>
+      </div>
+
+      <!-- Ticket Tab -->
+      <div class="category-tab tickets-tab-blk">
+        <ul class="nav nav-justified">
+          <li class="nav-item">
+            <a href="#all" class="nav-link active" data-bs-toggle="tab">All</a>
+          </li>
+          <li class="nav-item">
+            <a href="#feedback" class="nav-link" data-bs-toggle="tab"
+              >Feedback</a
+            >
+          </li>
+          <li class="nav-item">
+            <a href="#complaint" class="nav-link" data-bs-toggle="tab"
+              >Complaint</a
+            >
+          </li>
+        </ul>
+      </div>
+      <!-- /Ticket Tab -->
+
+      <!-- Referred Ticket List -->
+      <div class="tab-content">
+        <div class="tab-pane fade show active" id="all">
+          <div class="settings-tickets-blk table-responsive">
+            <!-- Referred Users-->
+            <table class="table table-nowrap mb-0">
+              <thead>
+                <tr>
+                  <th>Subject</th>
+                  <th>Description</th>
+                  <th>Type</th>
+                  <th>Send Mail</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let data of all; let j = index">
+                  <td class="px-3">
+                    <span
+                      [ngClass]="{
+                        'info-high badge text-center':
+                          data.type === 'reclamation'
+                      }"
+                      >{{ data.subject }}</span
+                    >
+                  </td>
+                  <td class="px-3">
+                    <span>{{ data.description }}</span>
+                  </td>
+                  <td class="px-3">
+                    <span
+                      [ngClass]="{
+                        'info-low': data.type === 'feedback',
+                        'info-high': data.type === 'reclamation'
+                      }"
+                      class="badge info-high"
+                      >{{ data.type | titlecase }}</span
+                    >
+                  </td>
+                  <td *ngIf="data.type === 'reclamation'">
+                    <button
+                      (click)="sendMailFromAll(j)"
+                      class="btn btn-three-secondary sub-btn mx-3"
+                    >
+                      <i class="fas fa-envelope"></i>
+                    </button>
+                    <span *ngIf="allCouponsSent[j]">Coupon sent!</span>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+            <!-- /Referred Users-->
+          </div>
+        </div>
+
+        <div class="tab-pane fade show" id="feedback">
+          <div class="settings-tickets-blk table-responsive">
+            <!-- Referred Users-->
+            <table class="table table-nowrap mb-0">
+              <thead>
+                <tr>
+                  <th>Subject</th>
+                  <th>Description</th>
+                  <th>Type</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let data of feedbacks">
+                  <td class="px-3">
+                    <span>{{ data.subject }}</span>
+                  </td>
+                  <td class="px-3">
+                    <span>{{ data.description }}</span>
+                  </td>
+                  <td class="px-3">
+                    <span
+                      [ngClass]="{
+                        'info-low': data.type === 'feedback',
+                        'info-high': data.type === 'reclamation'
+                      }"
+                      class="badge info-high"
+                      >{{ data.type | titlecase }}</span
+                    >
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+            <!-- /Referred Users-->
+          </div>
+        </div>
+        <div class="tab-pane fade show" id="complaint">
+          <div class="settings-tickets-blk table-responsive">
+            <!-- Referred Users-->
+            <table class="table table-nowrap mb-0">
+              <thead>
+                <tr>
+                  <th>Subject</th>
+                  <th>Description</th>
+                  <th>Type</th>
+                  <th>Send Mail</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let data of complaints; let j = index">
+                  <td class="px-3">
+                    <span class="info-high badge text-center">{{
+                      data.etat
+                    }}</span>
+                  </td>
+                  <td class="px-3">
+                    <span>{{ data.contenu }}</span>
+                  </td>
+                  <td class="px-3">
+                    <span class="badge info-high">{{
+                      "complaint" | titlecase
+                    }}</span>
+                  </td>
+                  <td>
+                    <button
+                      (click)="sendMail(j)"
+                      class="btn btn-three-secondary sub-btn mx-3"
+                    >
+                      <i class="fas fa-envelope"></i>
+                    </button>
+                    <span *ngIf="complaintsCouponsSent[j]">Coupon sent!</span>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+            <!-- /Referred Users-->
+          </div>
+        </div>
+      </div>
+      <!-- Referred Ticket List -->
     </div>
+  </div>
 </div>
